--- a/templates/temp.html
+++ b/templates/temp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CO2 Dashboard</title>
+    <title>Temp Dashboard</title>
     <style>
         /* CSS for arranging iframes horizontally */
         .iframe-container {
