--- a/templates/temp.html
+++ b/templates/temp.html
@@ -3,7 +3,7 @@
 <head>
     <title>Temperature Dashboard</title>
     <style>
-        /* CSS for arranging iframes horizontally */
+        /* CSS for iframes being horizontally */
         .iframe-container {
             display: flex; /* Use flexbox for horizontal layout */
         }
